build: rewrite the options

--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,4 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "src/index" }]
+  "builds": [{ "src": "src/index.py", "use": "@vercel/python" }],
+  "routes": [{ "src": "/.*", "dest": "src/index.py" }]
 }
